log/build_2025-05-09_16-16-49/robina_rfid/stderr.log
  File "/home/peko/colcon_ws/install/robina_rfid/lib/python3.12/site-packages/robina_rfid/step_publisher.py", line 6
    class StepPublisherNod6+6e(Node):
                            ^
SyntaxError: invalid decimal literal

